fixed the night mode on mobile and changed the scaling of the pins whenever on mobile

--- a/styles.css
+++ b/styles.css
@@ -336,7 +336,7 @@
     body {
         padding-left: env(safe-area-inset-left);
         padding-right: env(safe-area-inset-right);
-        pointer-events:none;
+        
     }
 
     .flex-container,
@@ -360,6 +360,10 @@
     }
     .backgroundVideo{
         display: none;
+    }
+
+    .text1 .contact:hover{
+        letter-spacing: 3px;
     }
 
     .pinOne{
@@ -386,6 +390,12 @@
         margin: 0; 
         width: 12%;     
     }
+
+    .pinOne:hover,
+    .pinTwo:hover,
+    .pinThree:hover {
+    transform: scale(1);
+}
     
 
     .social_nightMode{
@@ -395,6 +405,7 @@
     .menu{
         display: none;
     }
+
 }
 
 /* PHONE LANDSCAPE */
@@ -402,7 +413,7 @@
     body {
         padding-left: env(safe-area-inset-left);
         padding-right: env(safe-area-inset-right);
-        pointer-events:none;
+        
     }
 
     .flex-container,
